# Primus-SaFE

./: .gitattributes  .gitignore  .gitleaks.toml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SAFE_AUTH_VERIFY_BUG.md  cicd-architecture.html  codecov.yml  go.work  go.work.sum
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md
.github/security/: old-leak-commits.blocklist
.github/workflows/: block-old-leak-commits.yml  (+12 more)
Bench/: .gitignore  Dockerfile  Dockerfile_rocm7.0.3  README.md  build_rocm6.4.3.sh  build_rocm6.4.3_gfx942.sh  build_rocm6.4.3_gfx942_ubuntu22.04.sh  build_rocm7.0.2_gfx950_oci22.04_ainic.sh  build_rocm7.0.3.sh  build_rocm7.0.3_gfx950.sh  build_rocm7.0.3_gfx950_ubuntu22.04_ainic.sh  build_rocm7.2.0_gfx942_ubuntu24.04.sh  config.sh  primusbench_hosts.ini  run.sh  run_bare_metal.sh  run_local.sh  run_slurm.sh  salloc_slurm.sh
Bootstrap/: README.md  bootstrap.sh  hosts.ini  hosts.yaml
Lens/: Makefile  README.md  license-go.tpl
Lens/modules/exporters/wandb-exporter/: .gitignore  API_REPORTING.md  ASYNC_API_IMPLEMENTATION.md  INSTALL.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART_API.md  README.md  TRANSLATION_SUMMARY.md  UPGRADE.sh  check_version.sh  example_api_reporting.py  example_simple_test.py  example_usage.py  install.sh  install_hook.py  publish.ps1  publish.sh  pypi.env.example  pyproject.toml  quickstart.bat  quickstart.sh  setup.py  test_api_reporting.py  test_debug_switch.py  test_real_scenario.py  test_wandb_hook.py  update_version.sh
Lens/modules/exporters/wandb-exporter/example/: example_api_reporting.py  example_debug_demo.py  example_simple_test.py  example_usage.py
Lens/modules/exporters/wandb-exporter/src/primus_lens_wandb_exporter/: __init__.py  api_reporter.py  data_collector.py  hardware_info.py  logger.py  software_info.py  wandb_hook.py
SaFE/: README.md  go.work  go.work.sum
Scheduler-Plugins/: Makefile  README.md  go.mod  go.sum
Web/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.release  README.md  nginx.conf  package.json  pnpm-lock.yaml  start-offline.sh  start.sh
apis/: README.md  go.mod  go.sum
apiserver/: go.mod  go.sum
bench/: .dockerignore  .gitignore
bootstrap/: bootstrap.sh  create_table.sql  hosts.yaml  install-grafana.sh  install.sh  install_admin_plane.sh  install_data_plane.sh  install_grafana.sh  install_helm_package.sh  makefile  uninstall.sh  uninstall_admin_plane.sh  uninstall_data_plane.sh  upgrade.sh
charts/: Makefile
common/: go.mod  go.sum
docs/: cicd-repository-view-design.md  documentation-plan.md  github-workflow-rollout.md
docs-site/: .docs-test.env.example  .gitignore  AGENTS.md  README.md  RELEASE-GATE.md  RUN-DOCS-AS-TEST.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
hack/: boilerplate.go.txt
job-manager/: go.mod  go.sum
node-agent/: go.mod  go.sum
oci-test-scripts/: 01-single-full-sft.sh  02-single-lora-sft.sh  03-multi-full-sft.sh  04-multi-lora-sft.sh  common.sh
resource-manager/: go.mod  go.sum
scheduler-plugins/: Makefile  README.md  go.mod  go.sum
utils/: go.mod  go.sum
webhooks/: go.mod  go.sum
(+5653 files in other folders)
